# homework

./: .gitignore  CMakeLists.txt  allocator.hpp  container.hpp  filter_ip.cpp  filter_ip.hpp  ip_pool.cpp  ip_pool.hpp  lib.cpp  lib.h  list.hpp  main.cpp  print.hpp  test_filtration.cpp  test_version.cpp
.github/workflows/: release.yaml
release/: ip_filter
